# worship-prep-platform

./: .gitignore  AGENTS.md  manage.py  package-lock.json  package.json  pyproject.toml
apps/common/: models.py
apps/common/db/: fields.py  validators.py
apps/users/: admin.py  forms.py  models.py  templates.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: start_page.html
backend/: settings.py  urls.py
client/: Layout.tsx  index.tsx
client/templates/: MyTemplate.tsx
wpp_project/: asgi.py  settings.py  urls.py  wsgi.py
